--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "google-meet",
   "version": "0.1.0",
+  "homepage": "https://svitlananedilko.github.io/google-meet/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -24,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
